# spc1000

./: .gitignore  CMakeLists.txt  Makefile  README.md  SPCEMUL.INI  build.sh  get_dependencies.sh  spcdos-base.rom
android/: CMakeLists.txt
android/SDL2/src/main/: AndroidManifest.xml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: spcemul.ini
android/app/src/main/java/com/jindor/app/spc1000/: Spc1000Activity.java
android/app/src/main/java/org/libsdl/app/: SDLActivity.java
android/app/src/main/res/values/: strings.xml
example/: hexch.asm
patches/: SDL_android.c
src/: AY8910.c  AY8910.h  Codes.h  FILES.TXT  LICENSE.TXT  MC6847.c  MC6847.h  SPCEMUL.INI  SPCEMUL.dsp  SPCEMUL.dsw  Tables.h  Z80.h  Z80SPC.c  build.sh  cassette.c  cassette.h  cgbuf.c  common.h  dos.asm  dos.c  dos.h  fcb.asm  key_sdl.h  main.cpp  osd.c  osd.h  rom.c  spc1000.h  spc1000_jni.c  spc1000_jni.h  spckey.h  spcmain.c  sysdep.c  sysdep.h
src/Release/: SPCEMUL.INI
tool/: bin2tap.c  build_img.py  gen_romc.py  tapinfo.c
